# data-extraction-pedro-miranda

./: README.md  main.py  pyproject.toml
data/raw/: BaseMunicipioMensal.csv  Slides_Aula_02.md  bad_lines.csv  big_file.csv  censo_escolar_amostra_com_nulos.csv  dados_clinicos_brutos.csv  ibge_metadata.csv  movies.csv  produtos_brasil.csv  rais_amostra_suja.csv  relatorio_financeiro.xlsx  salarios.xlsx  vendas.csv
data/raw/batch_data/: log_2026_fev.csv  log_2026_jan.csv  log_2026_mar.csv
notebooks/: Exemplo_Codigo_Espaguete.ipynb  Lab_04_missing_values_viz_iris_datasus.ipynb  lab_01_flat_files.ipynb  lab_02_extra_northwind.ipynb  lab_02_sql_extraction.ipynb  lab_03_eda_advanced.ipynb  lab_03_eda_basics.ipynb  lab_04_missing_values_viz_Tinanic.ipynb  lab_05_imputation.ipynb  lab_06_cardinality.ipynb  lab_07_encoders.ipynb  lab_09_datetime.ipynb  lab_10_feature_engineering.ipynb  lab_11_outliers.ipynb  lab_12_scaling_smote.ipynb  lab_13_select_model.ipynb  lab_14_rfe.ipynb  lab_15_pipelines_intro.ipynb
scripts/: gerar_censo_mock.py  gerar_dados_saude_mock.py
